# safihr.cropmodel

./: Authors.txt  CMakeCPack.cmake  CMakeLists.txt  Copying.txt  Description.txt  License.txt  News.txt  Readme.txt  Todo.txt
data/: CMakeLists.txt  CULTURES.csv  date-semis-bourville-Aude.csv  date-semis-bourville.csv  date_semis.csv  luneray_temp-1992-2011.csv  luneray_temp-2000-2011.csv  luneray_temp_2001_2011-Aude.csv
doc/: CMakeLists.txt  modele_simple_culture
exp/: CMakeLists.txt  compare.vpz  first.vpz
src/: AI.hpp  CMakeLists.txt  CompareDateAI.cpp  GenericCropModel.cpp  Global.hpp  Meteo.cpp  MinimalistAI.cpp
